--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -923,6 +923,23 @@
   file = {/Users/nidhivinod/Zotero/storage/VBX9HYAU/S0168192311001481.html}
 }
 
+@article{belandVerticalStructureHeterogeneity2021,
+  title = {Vertical Structure Heterogeneity in Broadleaf Forests: {{Effects}} on Light Interception and Canopy Photosynthesis},
+  shorttitle = {Vertical Structure Heterogeneity in Broadleaf Forests},
+  author = {Béland, Martin and Baldocchi, Dennis D.},
+  date = {2021-09-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {307},
+  pages = {108525},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2021.108525},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192321002094},
+  urldate = {2022-02-11},
+  abstract = {Foliage clumping refers to the aggregation of leaves around branches and tree crowns. It has been shown to influence considerably light interception in forests and is increasingly being used in terrestrial biosphere models (TBMs) to estimate canopy photosynthesis, represented by a single value encompassing all spatial scales (shoot, branch, crown and plot): the clumping factor (Ω). Several studies have pointed to possible vertical variations in foliage clumping, and a recent study confirmed very low clumping factor values (high leaf aggregation) at the top of deciduous broadleaf forests. However complete profiles of clumping factors have never been described in tall forest canopies. As TBMs are currently moving towards multilayer schemes for the computation of photosynthesis, we investigated whether vertical profiles of foliage clumping should be considered within those schemes. We first used ground lidar combined with hemispherical photos to characterise branch level clumping factor (Ωv) at different heights in a deciduous broadleaf forest. We then applied the branch level clumping factor profile to four forests plots where complete 3D structure derived from ground lidar was available to produce vertical profiles (30 cm resolution) for foliage clumping (Ωl) and leaf area index (LAI). We ran radiative transfer simulations using different scenarios for representing vertical structure to assess its effect on canopy photosynthesis (without considering energy balance, temperature, kinetics or water balance). We found that when considering branch level clumping, the plot level clumping factor values were considerably lower (leaves more clumped together) than the average values commonly used for broadleaf forests. Modeling light fluxes using this lower value increased canopy photosynthesis because of a combination of greater light penetration to lower layers and non-linearity in the light-response curve. Considering the vertical profiles of foliage clumping further increased canopy photosynthesis through a greater contribution from shaded leaves in the lower and upper canopy levels. Further, we find that there is an optimal range of value for clumping factor which maximises photosynthesis, and the four sites surveyed (LAIs above 4) display clumping factors values close to this optimum. Solely on the basis of the effect of radiative transfer, we did not find notable differences in canopy photosynthesis when the LAI profile was considered. We find that it may be of interest to consider foliage clumping vertical profiles within TBM multilayer schemes, and we present a generic profile equation for use in dense deciduous forests.},
+  langid = {english},
+  keywords = {Canopy photosynthesis,Foliage clumping,Forest structure,Radiative transfer,Terrestrial lidar}
+}
+
 @article{benavidesIntraspecificTraitVariability2019,
   title = {Intraspecific Trait Variability of Trees Is Related to Canopy Species Richness in {{European}} Forests},
   author = {Benavides, Raquel and Valladares, Fernando and Wirth, Christian and Müller, Sandra and Scherer-Lorenzen, Michael},
@@ -2309,6 +2326,22 @@
   file = {/Users/nidhivinod/Zotero/storage/CLRI7CYA/Corlett - 2011 - Impacts of warming on tropical lowland rainforests.pdf;/Users/nidhivinod/Zotero/storage/8SI5CSGP/S0169534711001947.html}
 }
 
+@article{costeLeafPhotosyntheticTraits2005,
+  title = {Leaf Photosynthetic Traits of 14 Tropical Rain Forest Species in Relation to Leaf Nitrogen Concentration and Shade Tolerance},
+  author = {Coste, Sabrina and Roggy, Jean-Christophe and Imbert, Pascal and Born, Céline and Bonal, Damien and Dreyer, Erwin},
+  date = {2005-09-01},
+  journaltitle = {Tree Physiology},
+  volume = {25},
+  number = {9},
+  pages = {1127--1137},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/25.9.1127},
+  url = {https://doi.org/10.1093/treephys/25.9.1127},
+  urldate = {2022-02-11},
+  abstract = {Variability of leaf traits related to photosynthesis was assessed in seedlings from 14 tree species growing in the tropical rain forest of French Guiana. Leaf photosynthetic capacity (maximum rate of carboxylation and maximum rate of electron transport) was estimated by fitting a biochemical model of photosynthesis to response curves of net CO2 assimilation rate versus intercellular CO2 mole fraction. Leaf morphology described by leaf mass per unit leaf area (LMA), density and thickness, as well as area- and mass-based nitrogen (N) and carbon (C) concentrations, were recorded on the same leaves. Large interspecific variability was detected in photosynthetic capacity as well as in leaf structure and leaf N and C concentrations. No correlation was found between leaf thickness and density. The correlations between area- and mass-based leaf N concentration and photosynthetic capacity were poor. Conversely, the species differed greatly in relative N allocation to carboxylation and bioenergetics. Principal component analysis (PCA) revealed that, of the recorded traits, only the computed fraction of total leaf N invested in photosynthesis was tightly correlated to photosynthetic capacity. We also used PCA to test to what extent species with similar shade tolerances displayed converging leaf traits related to photosynthesis. No clear-cut ranking could be detected among the shade-tolerant groups, as confirmed by a one-way ANOVA. We conclude that the large interspecific diversity in photosynthetic capacity was mostly explained by differences in the relative allocation of N to photosynthesis and not by leaf N concentration, and that leaf traits related to photosynthetic capacity did not discriminate shade-tolerance ranking of these tropical tree species.},
+  file = {/Users/nidhivinod/Zotero/storage/A2G4ZJXE/Coste et al. - 2005 - Leaf photosynthetic traits of 14 tropical rain for.pdf}
+}
+
 @article{couvreurWaterTransportTall2018,
   title = {Water Transport through Tall Trees: {{A}} Vertically Explicit, Analytical Model of Xylem Hydraulic Conductance in Stems},
   shorttitle = {Water Transport through Tall Trees},
@@ -2820,6 +2853,23 @@
   langid = {english},
   keywords = {Canopy fullness,Evaporative demand,Leaf fall,Leaf flushing,Sahelian Africa,Soil water availability},
   file = {/Users/nidhivinod/Zotero/storage/JAPNE7U6/Do et al. - 2005 - Environmental influence on canopy phenology in the.pdf;/Users/nidhivinod/Zotero/storage/7PWA6EPJ/S0378112705003439.html}
+}
+
+@article{dominguesParameterizationCanopyStructure2005,
+  title = {Parameterization of {{Canopy Structure}} and {{Leaf-Level Gas Exchange}} for an {{Eastern Amazonian Tropical Rain Forest}} ({{Tapajós National Forest}}, {{Pará}}, {{Brazil}})},
+  author = {Domingues, Tomas F. and Berry, Joseph A. and Martinelli, Luiz A. and Ometto, Jean P. H. B. and Ehleringer, James R.},
+  date = {2005-10-01},
+  journaltitle = {Earth Interactions},
+  volume = {9},
+  number = {17},
+  pages = {1--23},
+  publisher = {{American Meteorological Society}},
+  doi = {10.1175/EI149.1},
+  url = {https://journals.ametsoc.org/view/journals/eint/9/17/ei149.1.xml},
+  urldate = {2022-02-11},
+  abstract = {Abstract Carbon flux of Amazonian primary forest vegetation has been shown to vary both spatially and temporally. Process-based models are adequate tools to understand the basis of such variation and can also provide projections to future scenarios. The parameterization of such process-based models requires information from the vegetation in question simply because ecosystem-level gas exchange is a direct result of the tightly coupled interaction between local vegetation and regional climate. In this study, data are presented concerning canopy structure [leaf area index (LAI), and the ratio of leaf dry mass to leaf area (LMA)], leaf chemistry [area-based foliar nitrogen content (Narea) and carbon isotope composition (δ13C)], and photosynthetic gas exchange [maximum carbon assimilation rates (Amax), stomatal conductance (gs@Amax), maximum carboxylation capacity (Vcmax), and respiration rates (Rd)] versus relative height from an extensive survey of primary forest vegetation of the Santarém region (eastern Amazon, Santarém, Federal State of Pará, Brazil). Ground-level LAI values ranged between 4.5 and 5.9. Both Amax and Vcmax showed large variations within the canopy profile with values ranging between 2.4 and 15.7 μmol m−2 s−1 and between 10.1 and 105.7 μmol m−2 s−1, respectively. Also, Narea varied between 0.75 to 4.19 gN m−2, and similar to Amax and Vcmax, showed higher values at the top of the canopy. Variations were detected among sites in patterns of vertical distribution of Narea and LAI, indicating spatial heterogeneity of the forest. Also, no statistically significant evidence of seasonal variations on parameters was observed, indicating that there is limited gas exchange acclimation by the vegetation to wet or dry seasons.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/NGPRGGDZ/Domingues et al. - 2005 - Parameterization of Canopy Structure and Leaf-Leve.pdf}
 }
 
 @article{dongBiophysicalHomoeostasisLeaf2017,
