--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -166,7 +166,7 @@ In addition, seasonally dry and wet conditions, deciduousness, and phenology con
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
 Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor.
-The profile shape of light is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001; @binLeafTraitExpression2022]. 
+The profile shape of light is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001; @binLeafTraitExpression2022; @belandVerticalStructureHeterogeneity2021]. 
 Canopy foliage absorb a large portion of the direct light in PAR (400-700nm), and selectively filter incident light along the gradient, therefore altering the spectral characteristics of light received in the lower canopy and understory layers. 
 Along with decreasing PAR, there is a decrease in the red (~685-690 nm) to far red (~730-740 nm) ratio of light as it reaches the forest floor, where understories receive diffused light enriched in near infrared radiation, and absorb light in wavelengths of 700-1000 nm [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
