I have incorporated some of these citations, not all
because some of them are repetative in terms of traits

--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -193,7 +193,7 @@ Table S3: Including the words vertical or vertical gradient could have been usef
 
 I included below some more references, mostly in the tropics.
 
-**Thank you for the references. We have reviewed these and incorporated as appropriate.** *(Nidhi, assuing this is true?)*
+**Thank you for the references. We have reviewed these and incorporated as appropriate.** 
 
 (Kitajima et al., 1997; Valladares et al., 1997, 2000; Thomas & Bazzaz, 1999; Carswell et al., 2000; Koch et al., 2004; Coste et al., 2005; Domingues et al., 2005; Lloyd et al., 2010; Van Goethem et al., 2014; Crous et al., 2020; Béland & Baldocchi, 2021)
 
