--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -12372,6 +12372,25 @@
   file = {/Users/nidhivinod/Zotero/storage/UQ49GX9N/Stark et al. - 2012 - Amazon forest carbon dynamics predicted by profile.pdf;/Users/nidhivinod/Zotero/storage/8DF94DN6/j.1461-0248.2012.01864.html}
 }
 
+@article{starkAmazonForestCarbon2012a,
+  title = {Amazon Forest Carbon Dynamics Predicted by Profiles of Canopy Leaf Area and Light Environment},
+  author = {Stark, Scott C. and Leitold, Veronika and Wu, Jin L. and Hunter, Maria O. and de Castilho, Carolina V. and Costa, Flávia R. C. and McMahon, Sean M. and Parker, Geoffrey G. and Shimabukuro, Mônica Takako and Lefsky, Michael A. and Keller, Michael and Alves, Luciana F. and Schietti, Juliana and Shimabukuro, Yosio Edemir and Brandão, Diego O. and Woodcock, Tara K. and Higuchi, Niro and de Camargo, Plinio B. and de Oliveira, Raimundo C. and Saleska, Scott R.},
+  editor = {Chave, Jerome},
+  options = {useprefix=true},
+  date = {2012-12},
+  journaltitle = {Ecol Lett},
+  volume = {15},
+  number = {12},
+  pages = {1406--1414},
+  issn = {1461023X},
+  doi = {10.1111/j.1461-0248.2012.01864.x},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2012.01864.x},
+  urldate = {2022-02-11},
+  abstract = {Tropical forest structural variation across heterogeneous landscapes may control above-ground carbon dynamics. We tested the hypothesis that canopy structure (leaf area and light availability) – remotely estimated from LiDAR – control variation in above-ground coarse wood production (biomass growth). Using a statistical model, these factors predicted biomass growth across tree size classes in forest near Manaus, Brazil. The same statistical model, with no parameterisation change but driven by different observed canopy structure, predicted the higher productivity of a site 500 km east. Gap fraction and a metric of vegetation vertical extent and evenness also predicted biomass gains and losses for one-hectare plots. Despite significant site differences in canopy structure and carbon dynamics, the relation between biomass growth and light fell on a unifying curve. This supported our hypothesis, suggesting that knowledge of canopy structure can explain variation in biomass growth over tropical landscapes and improve understanding of ecosystem function.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/RYD9RVTE/Stark et al. - 2012 - Amazon forest carbon dynamics predicted by profile.pdf}
+}
+
 @article{starkenburgTemperatureRegimesTurbulent2015,
   title = {Temperature Regimes and Turbulent Heat Fluxes across a Heterogeneous Canopy in an {{Alaskan}} Boreal Forest},
   author = {Starkenburg, Derek and Fochesatto, Gilberto J. and Cristóbal, Jordi and Prakash, Anupma and Gens, Rudiger and Alfieri, Joseph G. and Nagano, Hirohiko and Harazono, Yoshinobu and Iwata, Hiroki and Kane, Douglas L.},
@@ -12739,6 +12758,28 @@
   langid = {english},
   keywords = {Evergreen Forest,Maximum Wind Speed,Roughness Length,Wind Direction,Wind Speed},
   file = {/Users/nidhivinod/Zotero/storage/M3SI65KI/Tamai et al. - 2007 - Measurements of Wind Speed, Direction, and Vertica.pdf}
+}
+
+@article{tangLightdrivenGrowthAmazon2017,
+  title = {Light-Driven Growth in {{Amazon}} Evergreen Forests Explained by Seasonal Variations of Vertical Canopy Structure},
+  author = {Tang, Hao and Dubayah, Ralph},
+  date = {2017-03-07},
+  journaltitle = {PNAS},
+  volume = {114},
+  number = {10},
+  eprint = {28223505},
+  eprinttype = {pmid},
+  pages = {2640--2644},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1616943114},
+  url = {https://www.pnas.org/content/114/10/2640},
+  urldate = {2022-02-11},
+  abstract = {Light-regime variability is an important limiting factor constraining tree growth in tropical forests. However, there is considerable debate about whether radiation-induced green-up during the dry season is real, or an apparent artifact of the remote-sensing techniques used to infer seasonal changes in canopy leaf area. Direct and widespread observations of vertical canopy structures that drive radiation regimes have been largely absent. Here we analyze seasonal dynamic patterns between the canopy and understory layers in Amazon evergreen forests using observations of vertical canopy structure from a spaceborne lidar. We discovered that net leaf flushing of the canopy layer mainly occurs in early dry season, and is followed by net abscission in late dry season that coincides with increasing leaf area of the understory layer. Our observations of understory development from lidar either weakly respond to or are not correlated to seasonal variations in precipitation or insolation, but are strongly related to the seasonal structural dynamics of the canopy layer. We hypothesize that understory growth is driven by increased light gaps caused by seasonal variations of the canopy. This light-regime variability that exists in both spatial and temporal domains can better reveal the drought-induced green-up phenomenon, which appears less obvious when treating the Amazon forests as a whole.},
+  isbn = {9781616943110},
+  langid = {english},
+  keywords = {Amazon,forest structure,phenology,precipitation,remote sensing},
+  file = {/Users/nidhivinod/Zotero/storage/3J3MH8XG/Tang and Dubayah - 2017 - Light-driven growth in Amazon evergreen forests ex.pdf}
 }
 
 @article{tanOptimumAirTemperature2017,
