--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -161,8 +161,8 @@ Canopy foliage acts as the primary physical barrier between the atmosphere and t
 Leaf area density (*i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
 Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often relatively high as well, sometimes causing undulating patterns with height [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,@terborghVerticalComponentPlant1985; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989]. 
 In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
-Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @hanberryOpenForestEcosystems2020]. 
-In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
+Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkAmazonForestCarbon2012; @hanberryOpenForestEcosystems2020]. 
+In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
 Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor.
@@ -170,7 +170,7 @@ The profile shape of light is modified by leaf area density, leaf clumping, cano
 Canopy foliage absorb a large portion of the direct light in PAR (400-700nm), and selectively filter incident light along the gradient, therefore altering the spectral characteristics of light received in the lower canopy and understory layers. 
 Along with decreasing PAR, there is a decrease in the red (~685-690 nm) to far red (~730-740 nm) ratio of light as it reaches the forest floor, where understories receive diffused light enriched in near infrared radiation, and absorb light in wavelengths of 700-1000 nm [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
-This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in forests with more open upper canopies, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in forests with more open upper canopies, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 The implications of this light gradient are that leaf traits vary along the vertical gradient (Table 1), and that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
 
 Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature might also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. 
@@ -522,7 +522,7 @@ While the two are coupled over longer time scales [@humphreySoilMoistureAtmosphe
 Given the mechanisms reviewed here, we might expect that atmospheric dryness in particular skews the stress more towards the exposed canopy trees.   
 
 What remains poorly understood is how responses to warming will vary across vertical gradients under mesic conditions. 
-The leaf-level responses are relatively well-understood: at the metabolic level, photosynthesis and respiration are coupled to photosynthetic thermal optima, which reflect adapation to the local climate but do not vary consistently with height in the vertical profile (see section 4.2, Table 2). 
+The leaf-level responses are relatively well-understood: at the metabolic level, photosynthesis and respiration are coupled to photosynthetic thermal optima, which reflect adaptation to the local climate but do not vary consistently with height in the vertical profile (see section 4.2, Table 2). 
 Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. 
 While leaves display substantial plasticity to adapt to warmer temperatures [@slotGeneralPatternsAcclimation2015; @slotPhotosyntheticPlasticityTropical2021; @wayJustRightTemperature2019;@cunninghamTemperateRainforestTrees2003] and to recover from heat stress [@smithEmpiricalEvidenceResilience2020], failure to fully acclimate will result in reduced carbon sequestration at leaf and ecosystem levels [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. 
 Exposed canopies are likely most vulnerable, as growing season $T_{air}$ is increasingly equaling or exceeding photosynthetic optima [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019]. 
@@ -542,17 +542,17 @@ When the canopy trees die, this will open canopy gaps, as discussed in the follo
 
 ### Canopy disturbance
 
-As discussed above, rising temperatures and severe droughts place the canopy trees at particularly elevated risk of mortality. 
+As discussed above, rising temperatures and severe droughts place canopy trees at particularly elevated risk of mortality. 
 Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
 Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
-Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the forest [@starkReframingTropicalSavannization2020]. 
+Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
 Such changes often result in increased growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
 However, this shift to hotter and drier microclimates makes some forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
 Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
-Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but has dramatically reduced probability of recovering and persisting when affected by severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @starkReframingTropicalSavannization2020; @mcdowellPervasiveShiftsForest2020].
+Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may have reduced probability of recovering and persisting when affected by severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020].
 
-Canopy disturbance poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
+Canopy disturbance poses an increasing threat to the biodiversity of understory species that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020].
 In the understory, warming is disproportionately affecting the less thermally-adapted plant species, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020b; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
 If such compositional shifts towards more thermally-adapted species fail to keep up with the pace of warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g.,  @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy structure and the potential state changes described above.
@@ -576,7 +576,7 @@ In general, however, this variation is accounted for via light competition.
 Models partition incoming radiation and radiation within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018a]. 
 Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., CLM), while models with multiple vegetative layers can analytically solve the 2-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [e.g., @krinnerDynamicGlobalVegetation2005a]. 
 In recent years, there has been a growing effort to incorporate vertical variation more directly in models, specifically as it pertains to leaf water potential and light absorption by leaves, along with a general increasing interest in making direct comparison between models and field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
-Model developments by [Bonan et al., 2018; Chen et al., 2016; Longo et al., 2019] implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
+Model developments by [**Bonan et al., 2018; Chen et al., 2016; Longo et al., 2019**] implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
 
 The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.
 Improved representation of vertical variation in forest structure and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as an important step toward reduced uncertainty and more accurate characterization of biologically mediated feedbacks [@moorcroftMethodScalingVegetation2001; @banerjeeEffectVerticalCanopy2018; @bonanMovingIncorrectUseful2021]. 
@@ -624,7 +624,7 @@ As the climate changes, patterns and processes across these vertical gradients a
 Under the historical temperatures to which tree species are acclimated, the canopy is an advantageous place for trees to have their crowns, as it affords higher photosynthesis and growth. 
 However, as temperatures increase, it is likely that exposed canopy positions will become physiologically stressful for increasing proportions of time.
 Ensuant increased mortality of canopy trees will create an increasing number of gaps, resulting in changes to understory conditions and community composition.
-Ultimately, mid- and understory trees communities will be critical to the resilience of forest ecosystems under changing climate, making improved understanding and model representation of their dynamics critical to understanding future forest dynamics.
+Ultimately, mid- and understory tree communities will be critical to the resilience of forest ecosystems under changing climate, making improved understanding and model representation of their dynamics critical to understanding future forest dynamics.
 Integrating the patterns and mechanisms reviewed here, along with remote sensing data on forest structure and thermal environments, into cohort-based models that integrate with Earth system models will be critical to understanding and forecasting forest-climate feedbacks in the coming decades.
 
 
