--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -189,7 +189,7 @@ The implication is that upper canopy leaves have substantially higher boundary l
 
 Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
-Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ vertically, where both tend to be higher at lower heights (Table 1). 
+Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$) calculated from $\delta^{13}C$, and refixation of respired CO~2~ vertically, where both tend to be higher at lower heights (Table 1). 
 Particularly, understory seedlings above ground benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
 However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
  
